# CV-Job-Match-Maker

./: .dockerignore  .gitignore  AGENTS.md  README.md  STRATEGY.md  docker-compose.yml  opencode.json  pyproject.toml  run-llama-servers.bat  run-llama-servers.sh
.agents/skills/ask-questions-if-underspecified/: SKILL.md
.agents/skills/documentation-generator/: SKILL.md
.agents/skills/drawio-skill/: SKILL.md  VENDOR_NOTICE.md
.agents/skills/excalidraw/: .skill4agent.json  SKILL.md
.cursor/: mcp.json
.opencode/skills/code-review-assistant/: SKILL.md
.opencode/skills/testing-assistant/: SKILL.md
baml_src/: clients.baml  generators.baml  job_posting.baml  resume.baml
docs/: cv-job-match-maker-architecture.drawio  cv-job-match-maker-architecture.excalidraw
notebooks/: baml_test_retrieval.ipynb  data_collection.ipynb  embed_processed_json_to_qdrant.ipynb  ollama_connection.ipynb  preprocess_datasets.ipynb  qdrant_quickstart.ipynb
src/: __init__.py  app.py  config.py  embeddings.py  extraction.py  search.py
src/assets/: custom.css
src/pages/: __init__.py  document_detail.py  upload.py
