[project]
name = "cv-job-match"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "pandas>=2.2.0,<3",
    "requests>=2.32.5",
    "selenium>=4.41.0",
    "streamlit>=1.41.0",
    "pypdf>=5.3.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.2",
    "scikit-learn>=1.5.2",
    "qdrant-client>=1.17.1",
    "ollama>=0.6.1",
    "baml-py==0.222.0",
    "tiktoken>=0.8.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
